<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >
    
    <TextView
            android:id="@+id/nova_igra_naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:text="@string/naslov_nova_igra"
            android:textSize="24.5sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labela_ime_nove_igre" />


    <EditText
        android:id="@+id/ime_nove_igre_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="25dip"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labela_odaberite_ulogu" />

    <Spinner
        android:id="@+id/spinner_policajac_lopov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dip"
        android:prompt="@string/policajac_lopov_prompt" />

    <Button
        android:id="@+id/kreiraj_igru_dugme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dugme_kreiraj_igru" />

</LinearLayout>