<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:text="@string/ime_aplikacije"
            android:textSize="24.5sp" />

        <Button
            android:id="@+id/dugme_nova_igra"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:text="@string/labela_nova_igra" />
        
        <Button
            android:id="@+id/dugme_postojece_igre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:text="@string/labela_postojece_igre" />

        <Button
     	    android:id="@+id/dugme_exit"
     	    android:layout_width="fill_parent"
     	    android:layout_height="wrap_content"
     	    android:layout_gravity="bottom"
     	    android:text="@string/labela_exit" />

</LinearLayout>